fixed image that was overflowing into next column in different viewing modes

--- a/style.css
+++ b/style.css
@@ -39,5 +39,11 @@ h1 {
 }
 
 .restaurant-image {
-  width: 250px;
+  max-width: 100%;
+  width: 100%;
+}
+
+.movie-image {
+  max-width: 100%;
+  width: 100%;
 }
